--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>AcebusterSubs</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" href="favicon.jpg">
+	<link rel="icon" href="favicon.png">
   </head>
   <body>
     <div id="centerContent">
@@ -15,7 +15,7 @@
       <b>Is Hiromi cute?</b> Yes.<br>
       <p>We'll include a non-TS track on the final release, for people with toasters that can't handle the more intense parts.</p>
       <p>If you notice any script errors then please inform us on nyaa or in the pre-2000 threads on /a/.<p>
-      <p>You can also email us at HatsOffOctopus@protonmail.com or ratshit@protonmail.com</p>
+      <p>You can also email us at either HatsOffOctopus@protonmail.com or ratshit@protonmail.com.</p>
       <h2>Links</h2>
       <a href="https://nyaa.si/view/1013988">Episode 1 - 1080p</a>
   </body>
