--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>AcebusterSubs</title>
     <link rel="stylesheet" type="text/css" href="style.css">
-	<link rel="icon" href="favicon.png">
+	<link rel="icon" href="favicon.PNG">
   </head>
   <body>
     <div id="centerContent">
