--- a/index.html
+++ b/index.html
@@ -17,11 +17,19 @@
       <p>If you notice any script errors then please inform us on nyaa or in the pre-2000 threads on /a/.<p>
       <p>You can also email us at either HatsOffOctopus@protonmail.com or ratshit@protonmail.com.</p>
       <h2>Links</h2>
-      <a href="https://nyaa.si/view/1013988">Episode 1 - 1080p</a>
+	  <table>
+		<tr style="background-color:#383838">
+			<th style="font-weight:bold">1080p</th>
+			<th style="font-weight:bold">720p</th>
+		<tr>
+			<th><a href="https://nyaa.si/view/1013988">Episode 1 - 1080p</a></th>
+			<th>Soon™</th>
+		</tr>
+		<tr>
+			<th>Soon™</th>
+		</tr>
   </body>
 </html>
-
-
 
 
 
