--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			<th>Soon™</th>
 		</tr>
 		<tr>
-			<th>Soon™</th>
+			<th><a href="https://nyaa.si/view/1018022">Episode 2 - 1080p</a></th>
 		</tr>
   </body>
 </html>
