--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
 		<tr>
 			<th><a href="https://nyaa.si/view/1018022">Episode 2 - 1080p</a></th>
 		</tr>
+		<tr>
+			<th>Soon™</th>
+		</tr>
   </body>
 </html>
 
