--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <b>Is Hiromi cute?</b> Yes.<br>
       <p>We'll include a non-TS track on the final release, for people with toasters that can't handle the more intense parts.</p>
       <p>If you notice any script errors then please inform us on nyaa or in the pre-2000 threads on /a/.<p>
-      <p>You can also email us at either HatsOffOctopus@protonmail.com or ratshit@protonmail.com.</p>
+      <p>You can also email us at either HatsOffOctopus@protonmail.com or halkomugi@protonmail.com.</p>
       <h2>Links</h2>
 	  <table>
 		<tr style="background-color:#383838">
@@ -23,13 +23,19 @@
 			<th style="font-weight:bold">720p</th>
 		<tr>
 			<th><a href="https://nyaa.si/view/1013988">Episode 1 - 1080p</a></th>
-			<th>Soon™</th>
+			<th><a href="https://nyaa.si/view/1035817">Episode 1 - 720p</a></th>
 		</tr>
 		<tr>
 			<th><a href="https://nyaa.si/view/1018022">Episode 2 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1035819">Episode 2 - 720p</a></th>
 		</tr>
 		<tr>
-			<th>Soon™</th>
+			<th><a href="https://nyaa.si/view/1035821">Episode 3 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1035820">Episode 3 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1035829">Episode 4 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1035824">Episode 4 - 720p</a></th>			
 		</tr>
   </body>
 </html>
