--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
 			<th><a href="https://nyaa.si/view/1035820">Episode 3 - 720p</a></th>			
 		</tr>
 		<tr>
+			<th><a href="https://nyaa.si/view/1035829">Episode 4 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1035824">Episode 4 - 720p</a></th>			
+		</tr>
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
