--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <b>Is Hiromi cute?</b> Yes.<br>
       <p>We'll include a non-TS track on the final release, for people with toasters that can't handle the more intense parts.</p>
       <p>If you notice any script errors then please inform us on nyaa or in the pre-2000 threads on /a/.<p>
-      <p>You can also email us at either HatsOffOctopus@protonmail.com or halkomugi@protonmail.com.</p>
+      <p>You can also email us at halkomugi@protonmail.com.</p>
       <h2>Links</h2>
 	  <table>
 		<tr style="background-color:#383838">
