--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
 			<th><a href="https://nyaa.si/view/1035829">Episode 4 - 1080p</a></th>
 			<th><a href="https://nyaa.si/view/1035824">Episode 4 - 720p</a></th>			
 		</tr>
+		 <tr>
+			<th><a href="https://nyaa.si/view/1038840">Episode 5 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1038839">Episode 5 - 720p</a></th>			
+		</tr>
 		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
