--- a/index.html
+++ b/index.html
@@ -42,8 +42,12 @@
 			<th><a href="https://nyaa.si/view/1038839">Episode 5 - 720p</a></th>			
 		</tr>
 		<tr>
-			<th>Soon™</th>
-			<th>Soon™</th>			
+			<th><a href="https://nyaa.si/view/1044187">Episode 6 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1044186">Episode 6 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1052963">Episode 7 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1052962">Episode 7 - 720p</a></th>			
 		</tr>
   </body>
 </html>
