--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
 			<th><a href="https://nyaa.si/view/1052963">Episode 7 - 1080p</a></th>
 			<th><a href="https://nyaa.si/view/1052962">Episode 7 - 720p</a></th>			
 		</tr>
+		<tr>
+			<th>Soon™</th>
+			<th>Soon™</th>			
+		</tr>
   </body>
 </html>
-
-
-
-
-
