--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 			<th><a href="https://nyaa.si/view/1052962">Episode 7 - 720p</a></th>			
 		</tr>
 		<tr>
+			<th><a href="https://nyaa.si/view/1053255">Episode 8 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1053254">Episode 8 - 720p</a></th>			
+		</tr>
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
