--- a/index.html
+++ b/index.html
@@ -54,6 +54,14 @@
 			<th><a href="https://nyaa.si/view/1053254">Episode 8 - 720p</a></th>			
 		</tr>
 		<tr>
+			<th><a href="https://nyaa.si/view/1053586">Episode 9 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1053585">Episode 9 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1053949">Episode 10 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1053948">Episode 10 - 720p</a></th>			
+		</tr>
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
