--- a/index.html
+++ b/index.html
@@ -62,6 +62,14 @@
 			<th><a href="https://nyaa.si/view/1053948">Episode 10 - 720p</a></th>			
 		</tr>
 		<tr>
+			<th><a href="https://nyaa.si/view/1120134">Episode 11 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1120133">Episode 11 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1123299">Episode 12 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1123298">Episode 12 - 720p</a></th>			
+		</tr>  
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
