--- a/index.html
+++ b/index.html
@@ -70,6 +70,10 @@
 			<th><a href="https://nyaa.si/view/1123298">Episode 12 - 720p</a></th>			
 		</tr>  
 		<tr>
+			<th><a href="https://nyaa.si/view/1162706">Episode 13 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1162704">Episode 13 - 720p</a></th>			
+		</tr> 
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
