--- a/index.html
+++ b/index.html
@@ -74,6 +74,26 @@
 			<th><a href="https://nyaa.si/view/1162704">Episode 13 - 720p</a></th>			
 		</tr> 
 		<tr>
+			<th><a href="https://nyaa.si/view/1174212">Episode 14 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1174211">Episode 14 - 720p</a></th>			
+		</tr> 
+		<tr>
+			<th><a href="https://nyaa.si/view/1188864">Episode 15 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1188863">Episode 15 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1189143">Episode 16 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1189142">Episode 16 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1202176">Episode 17 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1202175">Episode 17 - 720p</a></th>			
+		</tr>
+		<tr>
+			<th><a href="https://nyaa.si/view/1202178">Episode 18 - 1080p</a></th>
+			<th><a href="https://nyaa.si/view/1202177">Episode 18 - 720p</a></th>			
+		</tr>
+		<tr>
 			<th>Soon™</th>
 			<th>Soon™</th>			
 		</tr>
